# algotraderibkr

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  architecture_plan.md  pyproject.toml
algotrader/: orchestrator.py
algotrader/core/: config.py  events.py  logging.py  models.py
algotrader/data/: alpaca_provider.py  cache.py  ibkr_provider.py  provider.py
algotrader/execution/: alpaca_executor.py  executor.py  ibkr_connection.py  ibkr_executor.py  order_manager.py
algotrader/intelligence/: regime.py
algotrader/risk/: portfolio_risk.py  position_sizer.py
algotrader/singlestock/: __init__.py  investigator.py  llm_client.py  lockfile.py  option_executor.py  options_picker.py  orchestrator.py  pdt_guard.py  position_manager.py  state.py  thesis.py
algotrader/strategies/: base.py  event_driven.py  gap_reversal.py  momentum.py  options_premium.py  pairs_trading.py  registry.py  sector_rotation.py  vwap_reversion.py
algotrader/strategy_selector/: __init__.py  allocator.py  brain.py  candidate.py  reviewer.py  scorer.py
algotrader/tracking/: alerts.py  attribution.py  broker_ledger.py  journal.py  learner.py  metrics.py  portfolio.py
config/: regimes.yaml  settings.yaml
config/strategies/: event_driven.yaml  gap_reversal.yaml  momentum.yaml  options_premium.yaml  pairs_trading.yaml  sector_rotation.yaml  vwap_reversion.yaml
dashboard/: app.py
outputs/: log_audit_2026-05-04.md
scripts/: analyze_trades.py  check_live.py  cleanup.py  run.py  run_singlestock.py  test_ibkr_connection.py
tests/unit/: test_brain.py  test_broker_ledger.py  (+4 more)
(+27 files in other folders)
